--- a/src/Components/Workexperience/Workexperience.css
+++ b/src/Components/Workexperience/Workexperience.css
@@ -20,20 +20,26 @@
     text-align: left;
     /* border: 1px solid yellow; */
     font-size: 1.3rem;
-    font-weight: 500;
+    font-weight: 700;
 
 }
 .position{
     padding-left: 1.5rem;
     text-align: left;
+    display: flex;
     /* border: 1px solid red; */
+    justify-content: space-between;
     font-size: 1.3rem;
     font-weight: 500;
+}
+#date{
+    align-self: flex-end;
 }
 .content{
     padding-left: 1.5rem;
     text-align: left;
     font-weight: 500;
+    /* list-style: discs; */
 
 }
 .techused{
