adding all the social media links

--- a/src/Cards/projectcard/Projectcard.css
+++ b/src/Cards/projectcard/Projectcard.css
@@ -113,7 +113,7 @@ article {
       container: card/inline-size;
     }
     .article-body p {
-      display: none;
+      /* display: none; */
     }
   }
   
