--- a/src/Components/Intro/Intro.css
+++ b/src/Components/Intro/Intro.css
@@ -11,7 +11,7 @@ flex-direction: column;
 }
 .backimg p{
     text-align: center;
-    color: #2a246c;
+    color: white;
     font-size: 40px;
     font-weight: bold;
 }
